--- a/loja.html
+++ b/loja.html
@@ -1,5 +1,45 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="./css/loja.css">
+    </head>
     <body>
-        Loja em construcao
+        <h1>Loja Sementes</h1>
+        <table>
+            <caption>Sementes</caption>
+            <thead>
+                <tr>
+                    <td>Especies</td>
+                    <td>Dificuldade de Germinacao</td>
+                    <td>Sementer por Pacote</td>
+                    <td>Precos (mangos)</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><i>Drosera dielsiana</i></td>
+                    <td>facil</td>
+                    <td>30</td>
+                    <td>R$2,00</td>
+                </tr>
+                <tr>
+                    <td><i>Sarracenia</i> hibrido</td>
+                    <td>media semear no inverso</td>
+                    <td>10</td>
+                    <td>R$3,00</td>
+                </tr>
+                <tr>
+                    <td><i>Drosera nidiformis</i></td>
+                    <td>media</td>
+                    <td>15</td>
+                    <td>R$2,00</td>
+                </tr>
+            </tbody>
+        </table>
+        <p>
+            Caso queira fazer um pedido, envie um email para <a href="mailto:custodio@plantascarnivoras.com.br">custodio@plantascarnivoras.com.br</a>.
+        </p>
+        <p>
+            Voltar para a <a href="./plantas.html">página de plantas.</a>
+        </p>
     </body>
 </html>
